# SmallConstructionsInCpp

./: CMakeLists.txt  README.md
1_Array_Construction/: CMakeLists.txt
1_Array_Construction/app/: main.cc
1_Array_Construction/include/: my_lib.h
1_Array_Construction/src/: my_lib.cc
2_Struckt_Enum/: CMakeLists.txt
2_Struckt_Enum/app/: main.cc
2_Struckt_Enum/src/: my_lib.cc
3_Mean_Array/: CMakeLists.txt
3_Mean_Array/app/: main.cc
3_Mean_Array/include/: my_lib.h
3_Mean_Array/src/: my_lib.cc
3_Namespace_Array/: CMakeLists.txt
3_Namespace_Array/src/: CMakeLists.txt  my_lib.cc
4_Array_in_heap/app/: main.cc
4_Array_in_heap/include/: my_lib.h
4_Array_in_heap/src/: my_lib.cc
4_Dynamic_Array/: CMakeLists.txt
4_Dynamic_Array/app/: main.cc
4_Dynamic_Array/include/: AlgoArray.h  my_lib.h
4_Dynamic_Array/src/: AlgoArray.cc  my_lib.cc
5_Dynamic_Array/: CMakeLists.txt
5_Dynamic_Array/app/: main.cc
5_Dynamic_Array/src/: CMakeLists.txt
6_2D_Vector_print/: CMakeLists.txt
6_2D_Vector_print/app/: main.cc
6_2D_Vector_print/include/: my_lib.h
6_2D_Vector_print/src/: my_lib.cc
7_Correlation_coefficient/: CMakeLists.txt
7_Correlation_coefficient/app/: main.cc
7_Correlation_coefficient/include/: my_lib.h
7_Correlation_coefficient/src/: my_lib.cc
8_Matrix_Class/: CMakeLists.txt
8_Matrix_Class/app/: CMakeLists.txt  main.cc
8_Matrix_Class/include/: Matrix.h
dummy/: CMakeLists.txt
dummy/app/: main.cc
dummy/src/: CMakeLists.txt
