cmake_minimum_required(VERSION 3.14)

project(AdvancedCProgrammingCourse VERSION 1.0.0 LANGUAGES C)

# add_subdirectory("dummy")

# add_subdirectory("1_Array_Construction")

# add_subdirectory("2_Struckt_Enum")

# add_subdirectory("3_Mean_Array")

add_subdirectory("4_Dynamic_Array")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

